force-app/main/default/objects/Contact/fields/AdSales_Accounting_Email_Adresses__c.field-meta.xml
<CustomField>
    <fullName>AdSales_Accounting_Email_Adresses__c</fullName>
    <description>Field to list all email addresses belonging to the account that have the role/function AdSales Accounting. The field is triggered by the flow LIM_Contact_mergeAdSalesAccounting_Changes.</description>
    <label>AdSales Accounting Email Adresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>