force-app/main/default/objects/Contact/fields/BusinessUnitAdSalesContact__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitAdSalesContact__c</fullName>
    <description>Used for AdSales only</description>
    <label>Business Unit AdSales Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>MarketplaceRetail</fullName>
                <label>Marketplace + Retail</label>
            </value>
            <value>
                <fullName>extern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>