force-app/main/default/objects/Contact/fields/IntegrationAgencyName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationAgencyName__c</fullName>
    <description>Name of integration agency contact belongs to.</description>
    <inlineHelpText>Name of integration agency contact belongs to.</inlineHelpText>
    <label>Integration Agency Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RoleFunction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arvatis GmbH</fullName>
            </value>
            <value>
                <fullName>Brandsom.nl</fullName>
            </value>
            <value>
                <fullName>cbdesk GmbH</fullName>
            </value>
            <value>
                <fullName>COM.Create</fullName>
            </value>
            <value>
                <fullName>Demgensky Plentymarkets Berater</fullName>
            </value>
            <value>
                <fullName>ECOMRC - Bonny &amp; Bonny GbR</fullName>
            </value>
            <value>
                <fullName>Fortuneglobe GmbH</fullName>
            </value>
            <value>
                <fullName>go eCommerce GmbH</fullName>
            </value>
            <value>
                <fullName>Heista GmbH</fullName>
            </value>
            <value>
                <fullName>inside X commerce</fullName>
            </value>
            <value>
                <fullName>Ostermann E-Commerce Beratung</fullName>
            </value>
            <value>
                <fullName>Starten mit Konzept GmbH</fullName>
            </value>
            <value>
                <fullName>T4DT GmbH</fullName>
            </value>
            <value>
                <fullName>Tradebyte Mapping Service</fullName>
            </value>
            <value>
                <fullName>Web Wikinger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>