force-app/main/default/objects/Contact/fields/IntegrationFunction__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFunction__c</fullName>
    <label>Integration Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>RoleFunction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ProductActivationContact</fullName>
                <label>Product Activation contact</label>
            </value>
            <value>
                <fullName>AdminContact</fullName>
                <label>Admin contact</label>
            </value>
            <value>
                <fullName>TechContact</fullName>
                <label>Tech contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>