force-app/main/default/objects/Contact/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <label>Main Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prio 1</fullName>
            </value>
            <value>
                <fullName>Prio 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>