force-app/main/default/objects/Contact/fields/RoleFunction__c.field-meta.xml
<CustomField>
    <fullName>RoleFunction__c</fullName>
    <label>Role / Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AccountingFinance</fullName>
                <label>Accounting/ Finance</label>
            </value>
            <value>
                <fullName>AccountingContactInvoiceMails</fullName>
                <label>Accounting contact - invoice mails</label>
            </value>
            <value>
                <fullName>AdSalesAccounting</fullName>
                <label>AdSales Accounting</label>
            </value>
            <value>
                <fullName>AdSalesManager</fullName>
                <label>Ad-Sales Manager</label>
            </value>
            <value>
                <fullName>CompanyManagement</fullName>
                <label>Company Management</label>
            </value>
            <value>
                <fullName>CustomerService</fullName>
                <label>Customer Service</label>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Edi</fullName>
                <label>EDI</label>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>IntegrationAgency</fullName>
                <label>Integration Agency</label>
            </value>
            <value>
                <fullName>KeyAccountManager</fullName>
                <label>Key Account Manager</label>
            </value>
            <value>
                <fullName>Logistic</fullName>
            </value>
            <value>
                <fullName>Marketing Director</fullName>
            </value>
            <value>
                <fullName>MarketingManager</fullName>
                <label>Marketing Manager</label>
            </value>
            <value>
                <fullName>ProductActivation</fullName>
                <label>Product Activation</label>
            </value>
            <value>
                <fullName>ProjectLead</fullName>
                <label>Project Lead</label>
            </value>
            <value>
                <fullName>Replenishment</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Sales contact</fullName>
            </value>
            <value>
                <fullName>SalesManager</fullName>
                <label>Sales Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>