force-app/main/default/objects/Contact/fields/RoleMarketplace__c.field-meta.xml
<CustomField>
    <fullName>RoleMarketplace__c</fullName>
    <description>Roles only for Marketplace.</description>
    <label>Role Marketplace</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Contact</fullName>
            </value>
            <value>
                <fullName>Tech Contact</fullName>
            </value>
            <value>
                <fullName>Key Account Contact</fullName>
            </value>
            <value>
                <fullName>Ad Sales Manager</fullName>
            </value>
            <value>
                <fullName>Ad Sales Accounting</fullName>
            </value>
            <value>
                <fullName>Mirakl Invitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>