force-app/main/default/objects/Contact/listViews/All_Contacts_Live_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Contacts_Live_Accounts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <filters>
        <field>IntegrationFunction__c</field>
        <operation>includes</operation>
        <value>TechContact,AdminContact,ProductActivationContact</value>
    </filters>
    <label>All Contacts Live Accounts</label>
    <sharedTo>
        <group>Marketplace</group>
    </sharedTo>
</ListView>