force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Main_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.AccountManager__c</field>
        <operation>equals</operation>
        <value>Nesrin Esen</value>
    </filters>
    <filters>
        <field>Account.Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <filters>
        <field>Main_Contact__c</field>
        <operation>equals</operation>
        <value>Prio 1,Prio 2</value>
    </filters>
    <label>My Contacts</label>
</ListView>