force-app/main/default/objects/Contact/listViews/X01_Mailing_Liste.listView-meta.xml
<ListView>
    <fullName>X01_Mailing_Liste</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Status__c</columns>
    <columns>Account.Priority_Category__c</columns>
    <columns>Account.Category__c</columns>
    <columns>Account.SalesManager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Status__c</field>
        <operation>equals</operation>
        <value>InProgress,InactiveOpportunity</value>
    </filters>
    <filters>
        <field>BusinessUnit__c</field>
        <operation>equals</operation>
        <value>Marketplace,MarketplaceAdSales,MarketplaceRetail,All</value>
    </filters>
    <filters>
        <field>Account.InactiveOpportunityReasons__c</field>
        <operation>notEqual</operation>
        <value>Insolvency,NoEuWarehouse,Not a Fit (Limango)</value>
    </filters>
    <label>Christmas Mailing</label>
    <sharedTo>
        <group>Sales</group>
    </sharedTo>
</ListView>