force-app/main/default/objects/Contact/listViews/X02_PM_CS_Admin_Contacts.listView-meta.xml
<ListView>
    <fullName>X02_PM_CS_Admin_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>RoleFunction__c</columns>
    <columns>IntegrationFunction__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>02_PM CS Admin Contacts</label>
</ListView>